...
        <scene sceneID="YCy-ic-5Z0">
            <objects>
                <viewController title="New Workout" id="4fl-hN-UbC" customClass="AddWorkoutViewController" customModule="Alpha" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="aAI-Va-pqh">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="yD7-HU-cwf">
                                        <rect key="frame" x="0.0" y="0.0" width="398" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="nameField"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <rect key="frame" x="0.0" y="642" width="414" height="50"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="selectExercises"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="E9i-U6-oNN"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Workouts" id="5JC-J9-xit">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="v0n-Xh-tlq">
                            <connections>
...
                                            <outlet property="repsField" destination="en1-8V-CBh" id="9cF-am-njM"/>
                                            <outlet property="setLabel" destination="YVo-P7-dkF" id="qVf-0D-shL"/>
                                            <outlet property="weightField" destination="KtP-vI-XDD" id="ILF-Bx-xDo"/>
                                        </connections>
                                    </tableViewCell>
...
        <scene sceneID="sPW-dj-QJ4">
            <objects>
                <viewController title="Profile" id="x3V-i2-ilw" customClass="ProfileViewController" customModule="Alpha" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="RMM-E5-aM1">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yOG-g4-mXG">
                                                        <rect key="frame" x="0.0" y="0.0" width="107.33333333333333" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="ageField"/>
                                                        <nil key="textColor"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pTt-Oa-B9f">
                                                        <rect key="frame" x="137.33333333333334" y="0.0" width="107.33333333333334" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="heightField"/>
                                                        <nil key="textColor"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <rect key="frame" x="0.0" y="637" width="414" height="50"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137254901957" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="startWorkoutButton" label="startWorkoutButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="koU-ax-Qs9"/>
...
